fix: Update all project IDs to use djuvnasyncdqhsrydkse (correct project)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,7 +1,7 @@
 # Supabase Edge Functions Configuration
 
 [project]
-id = "lwyzoynbpuytmtcrjbga"
+id = "djuvnasyncdqhsrydkse"
 
 [functions]
 make-server-51144976 = { verify_jwt = false }
